Add Spring Boot backend Docker deployment configuration
- Create multi-stage Dockerfile with Gradle 8/JDK 21 build stage and
  Eclipse Temurin 21 JRE runtime stage
- Configure JVM with ZGC for low-latency GC optimized for virtual threads
- Add JAVA_TOOL_OPTIONS environment variable to docker-compose for
  runtime JVM configuration override
- Add health check with curl on /actuator/health endpoint
- Update .env.example with JVM configuration documentation
- Document build process, JVM settings, and CI/CD integration in README

Closes #7